src/FinancialForce Accounting/objects/codaTaxCode__c.object
<CustomObject>
    <customHelpPage>codahelptaxcode</customHelpPage>
    <description>Stores details on tax codes.</description>
    <fields>
        <fullName>ChildTaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GST Child Tax Code</description>
        <label>GST</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (first child)</relationshipLabel>
        <relationshipName>ChildTaxCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChildTaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PST/QST Child Tax Code</description>
        <label>PST/QST</label>
        <referenceTo>codaTaxCode__c</referenceTo>
        <relationshipLabel>Tax Codes (second child)</relationshipLabel>
        <relationshipName>ChildTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The General Ledger Account</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Tax Codes (General Ledger Account)</relationshipLabel>
        <relationshipName>TaxCodesGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxGroup__c</fullName>
        <label>Tax Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax Group 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxModel__c</fullName>
        <description>Tax Model</description>
        <label>Tax Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HST</fullName>
                </value>
                <value>
                    <fullName>PST &amp; GST</fullName>
                </value>
                <value>
                    <fullName>GST &amp; QST</fullName>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>QST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tax Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>GeneralLedgerAccount__c</columns>
        <columns>TaxGroup__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>